<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/global_padding">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/eanLookupTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cz_cez_ean_lookup_title"
                android:textSize="@dimen/title_font_size"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/eanLookupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/global_margin"
                android:text="@string/cz_cez_ean_lookup_text"/>

        <EditText
                android:id="@+id/eanLookupEanField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/service_point_detail_cz_cez_ean_textfield"/>

        <ImageView
                android:id="@+id/eanLookupCaptchaImage"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="@dimen/global_margin"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:contentDescription="@string/cz_cez_ean_lookup_captcha_textfield"/>

        <Button
                android:id="@+id/eanLookupRefreshCaptchaButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cz_cez_ean_lookup_button_refresh_captcha"/>

        <EditText
                android:id="@+id/eanLookupCaptchaField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:hint="@string/cz_cez_ean_lookup_captcha_textfield"/>

        <TextView
                android:id="@+id/eanLookupMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_padding_half"
                android:visibility="gone"/>

        <Button
                android:id="@+id/eanLookupSearchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_margin"
                android:text="@string/cz_cez_ean_lookup_button_search"/>

    </LinearLayout>

</ScrollView>
