<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:padding="@dimen/global_padding">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="10">
        <TextView
                android:text="@string/welcome_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/welcomeTitle"
                android:textSize="@dimen/title_font_size"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/welcome_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/welcomeText"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/welcome_button_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/buttonNext"/>
    </LinearLayout>
</LinearLayout>
